--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser": "~13.2.0",
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
+    "angular2-notifications": "^12.0.0",
     "firebase": "^9.6.10",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
