--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "angular2-notifications": "^12.0.0",
+    "angular2-text-mask": "^9.0.0",
     "firebase": "^9.6.10",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
